tests/snapshots/trace_cli__trace_cli@3130517900821430636.snap
---
source: tests/trace_cli.rs
info: set downgrade_mut_inside_shared true
---
downgrade_mut_inside_shared: false -> true

Warning: option `downgrade_mut_inside_shared` is not represented in the rules
