tests/snapshots/trace_cli__trace_cli@5424317146947097472.snap
---
source: tests/trace_cli.rs
info: "&x: &mut T"
---
&x @ p: &mut T
// Applying rule `DerefMutWithShared(EatOuter)`
&x @ &*p: &T
// Applying rule `Deref(EatOuter)`
x @ *&*p: T
// Applying rule `Binding`
let x: T = *&*p

// Final bindings (simplified):
let x: T = *p
