tests/snapshots/trace_cli__trace_cli@9851277420024275049.snap
---
source: tests/trace_cli.rs
info: "set stable_rust\nrules"
---
allow_ref_pat_on_ref_mut: true -> false
eat_inherited_ref_alone: true -> false
inherited_ref_on_ref: "EatOuter" -> "EatBoth"
mut_binding_on_inherited: "Keep" -> "ResetBindingMode"
ref_binding_on_inherited: "Error" -> "Skip"
simplify_expressions: true -> false
p0 @ p.0: T0, p1 @ p.1: T1
-------------------------- "Constructor"
[p0, p1] @ p: [T0, T1]

p0 @ &(*p).0: &T0, p1 @ &(*p).1: &T1
------------------------------------ "ConstructorRef"
[p0, p1] @ p: &[T0, T1]

p0 @ &mut (*p).0: &mut T0, p1 @ &mut (*p).1: &mut T1
---------------------------------------------------- "ConstructorRef"
[p0, p1] @ p: &mut [T0, T1]

[p0, p1] @ *p: &T
----------------- "ConstructorMultiRef"
[p0, p1] @ p: &&T

[p0, p1] @ *p: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ p: &mut &T

[p0, p1] @ &**p: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ p: &&mut T

[p0, p1] @ &mut **p: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ p: &mut &mut T

p @ *p: T
---------------------------------- "Deref(EatOuter)"
&p @ p: &T, binding_mode(p) = move

p @ *p: T
------------------------------------------ "Deref(EatOuter)"
&mut p @ p: &mut T, binding_mode(p) = move

p @ *p: T
------------ "Deref(EatBoth)"
&p @ &p: &&T

p @ *p: T
-------------------- "Deref(EatBoth)"
&p @ &mut p: &mut &T

p @ *p: T
-------------------- "Deref(EatBoth)"
&mut p @ &p: &&mut T

p @ *p: T
---------------------------- "Deref(EatBoth)"
&mut p @ &mut p: &mut &mut T

x @ &p: &T
-------------- "BindingOverrideBorrow"
ref x @ &p: &T

x @ &p: &T
---------------------- "BindingOverrideBorrow"
ref x @ &mut p: &mut T

x @ &mut p: &mut T
------------------ "BindingOverrideBorrow"
ref mut x @ &p: &T

x @ &mut p: &mut T
-------------------------- "BindingOverrideBorrow"
ref mut x @ &mut p: &mut T

mut x @ p: T
-------------- "BindingResetBindingMode"
mut x @ &p: &T

mut x @ p: T
---------------------- "BindingResetBindingMode"
mut x @ &mut p: &mut T

x @ &p: &T
------------------------------------ "BindingBorrow"
ref x @ p: T, binding_mode(p) = move

x @ &mut p: &mut T
---------------------------------------- "BindingBorrow"
ref mut x @ p: T, binding_mode(p) = move

let x: T = p
-------------------------------- "Binding"
x @ p: T, binding_mode(p) = move

let x: &mut T = &mut p
---------------------- "Binding"
x @ &mut p: &mut T

let x: &T = &p
-------------- "Binding"
x @ &p: &T

let mut x: T = p
------------------------------------ "Binding"
mut x @ p: T, binding_mode(p) = move
